# reram-simulation

./: .gitattributes  .gitignore  .vercelignore  CONTRIBUTING.md  LICENSE  README.md  files.json  index.html  pyproject.toml  requirements.txt  setup.py  vercel.dev.json  vercel.json
.github/workflows/: ci.yml
.streamlit/: config.toml
configs/: ideal.yaml  non_ideal.yaml  snn_config.yaml
dashboard/: app.py
docs/: GITHUB.md  architecture.md  energy_model.md  fabrication_notes.md  hardware_mapping.md
experiments/: energy_comparison.ipynb  train_mnist.py  trained_weights.npy
public/dashboard/: app.py
public/experiments/: ideal_vs_nonideal.ipynb  mnist_snn.ipynb  mnist_test.py  snn_integration.ipynb
public/src/: main.py
public/src/crossbar/: __init__.py
public/src/hardware/: __init__.py
public/src/snn/: __init__.py  network.py  trainer.py
public/src/utils/: __init__.py  config_loader.py  mnist_loader.py
scripts/: generate_stlite_files.py
src/: __init__.py  __main__.py
src/crossbar/: ideal_crossbar.py  ir_drop_model.py  non_ideal_crossbar.py  quantization.py  variability.py
src/hardware/: accelerator_model.py  controller_logic.py  energy_estimator.py
src/snn/: network.py  neuron.py  spike_encoder.py  trainer.py
src/utils/: logger.py  metrics.py  visualization.py  weight_io.py
tests/: conftest.py  test_crossbar.py  test_energy.py  test_snn.py
verilog/: README.md  accumulator.sv  crossbar_controller.sv  spike_encoder.sv  tb_neuro_edge.sv  top_neuro_edge.sv  versal_pins.xdc  versal_synth.tcl
verilog/experimental/: crossbar_mlc_controller.sv
