[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "neuro-edge-reram-simulator"
version = "0.1.0"
description = "Neuro-Edge ReRAM Simulator: in-memory computing and SNN simulation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [
    {name = "Neuro-Edge ReRAM Simulator Contributors"}
]
keywords = ["reram", "in-memory computing", "snn", "crossbar", "hardware"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.21.0,<2.0.0",
    "scipy>=1.7.0",
    "PyYAML>=6.0",
    "streamlit>=1.20.0",
    "matplotlib>=3.5.0",
    "jupyter>=1.0.0",
    "notebook>=6.4.0",
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "kagglehub>=0.2.0",
    "pandas>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]

[project.urls]
Repository = "https://github.com/your-username/neuro-edge-reram-simulator"
Documentation = "https://github.com/your-username/neuro-edge-reram-simulator#readme"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__main__.py"]
